[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Piso.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Jogo1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Jogo2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Jogo3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Jogo4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/DroidSans.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="grid" type="Node2D" parent="."]
z_index = 10

[node name="Sprite" type="Sprite" parent="grid"]
position = Vector2( 517, 300.819 )
scale = Vector2( 0.25, 12.0132 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="grid"]
position = Vector2( 515.892, 300 )
rotation = 1.5708
scale = Vector2( 0.25, 20.5548 )
texture = ExtResource( 2 )

[node name="Jogo1" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.5 )

[node name="Jogo2" parent="." instance=ExtResource( 4 )]
position = Vector2( 512.492, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="Jogo3" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.177246, 300.368 )
scale = Vector2( 0.5, 0.5 )

[node name="Jogo4" parent="." instance=ExtResource( 6 )]
position = Vector2( 512.492, 300.368 )
scale = Vector2( 0.5, 0.5 )

[node name="score" type="Label" parent="."]
margin_left = 19.0
margin_top = 17.0
margin_right = 127.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

